--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/marian"]
 	path = src/marian
-	url = https://github.com/CatarinaSilva/marian-dev.git
+	url = https://github.com/CatarinaSilva/marian-dev.git@fix-cmake-python3.5
 	branch = master
 [submodule "examples"]
 	path = examples
